<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#6A5353"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/title_text"
            style="@style/main_text_style"
            android:text="@string/title_text"
            android:textColor="@color/text_color_title"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_outof"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/out_of_text"
            android:textColor="#F6F0F0"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="379dp"
            android:layout_height="152dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#B8A0A0"
            android:elevation="12dp"
            app:cardCornerRadius="@dimen/corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_outof">

            <TextView
                android:id="@+id/question_textView"
                style="@style/main_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:text="@string/placeholder"
                android:textColor="@color/design_default_color_background" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_true"
            style="@style/button_style"
            android:layout_width="389dp"
            android:layout_marginTop="112dp"
            android:text="@string/true_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.727"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <Button
            android:id="@+id/button_next"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/next_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.848"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_false" />

        <Button
            android:id="@+id/button_false"
            style="@style/button_style"
            android:layout_width="0dp"
            android:layout_marginTop="104dp"
            android:text="@string/false_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_true" />

        <TextView
            android:id="@+id/score_textView"
            android:layout_width="195dp"
            android:layout_height="39dp"
            android:text="@string/score"
            android:textColor="#FCF8F5F5"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.783"
            app:layout_constraintStart_toEndOf="@+id/textView_outof"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.414" />

        <TextView
            android:id="@+id/score_text"
            android:layout_width="178dp"
            android:layout_height="28dp"
            android:fontFamily="@font/chonburi"
            android:textColor="#EFE6E6"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/score_textView" />

        <Button
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            android:backgroundTint="#009688"
            android:text="share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_next" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>